# BICEP

./: .gitattributes  .gitignore  README.md  bench_extension.py  bicep_core.py  brownian_compute_cpu_v_gpu.ipynb  enn_bicep_integration.py  enn_bicep_simple.py  extreme_optimization_analysis.py  final_enn_bicep_integration.py  flake.nix  log_test.py  metal_bicep_benchmark.py  metal_kernel_bicep.py  pyproject.toml  requirements.txt  run_pipeline.sh  triton_test.ipynb  ultimate_metal_bicep.py  ultra_optimized_bicep.py
results/benchmarks/: test_performance.py
src/bicep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/randomness/: brownian_graph_walk.py  brownian_motion.py  stochastic_control.py
tests/: test_brownian_motion.py  test_graph_walk.py  test_stochastic_control.py
