[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bicep"
version = "0.1.0"
description = "…"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0",
  "triton>=2.0",
  "numpy>=1.20",
]


[project.dependencies]
torch = ">=2.0"
triton = ">=2.0"
numpy = ">=1.20"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
